--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,8 @@
 name: mnist-transformer
 channels:
+  - pytorch
+  - defaults
+  - conda-forge
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
